--- a/miscellany/awards-exhibitions.html
+++ b/miscellany/awards-exhibitions.html
@@ -61,6 +61,12 @@
       <li><strong>Behance 2012</strong> (Adobe), Most appreciated projects for <em>Valentina</em>.</li>
       <li><strong>CEA 2012</strong>, 2nd best project for <em>Valentina</em>.</li>
     </ul>
+    <!-- <h1>Jury</h1>
+    <ul>
+      <li><strong>World Brand Design Society Awards</strong>, 2020.</li>
+      <li><strong>Premios Gràffica</strong>, 2020.</li>
+      <li><strong>Ukranian Design: The Very Best</strong>, 2020.</li>
+    </ul> -->
   </section>
   <section class="footer">
     <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
