--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -35,6 +35,10 @@
     <h2>2020</h2>
     <ul>
       <li><em><strong>Replay</em></strong> by Tristan Donovan 💙</li>
+      <li><em><strong>Historia de un hombre de Cinco Villas</em></strong> de Dionisio Lacasa Abadía</li>
+      <li><em><strong>Manifiesto por la lectura</em></strong> de Irene Vallejo 💙</li>
+      <li><em><strong>Morder la manzana</em></strong> de Leticia Dolera 💙</li>
+      <li><em><strong>La mala leche</em></strong> de Henar Álvarez y Ana Müshell</li>
       <li><em><strong>El infinito en un junco</em></strong> de Irene Vallejo ❤️</li>
       <li><em><strong>El ABC de la tipografía</em></strong> de David Rault y VV.AA.</li>
       <li><em><strong>El fin de la eternidad</em></strong> de Isaac Asimov</li>
