--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -33,8 +33,10 @@
     </p>
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Hades</em></strong> on Nintendo Switch, 35 hours 💙</li>
-      <li><em><strong>Ori and the Will of Wisps</em></strong> on Nintendo Switch, 5 hours</li>
+      <li><em><strong>Immortals Fenyx Rising</em></strong> on Nintendo Switch, 30 hours</li>
+      <li><em><strong>Dead cells</em></strong> on Nintendo Switch, 10 hours</li>
+      <li><em><strong>Bioshock</em></strong> on Nintendo Switch, 3 hours</li>
+      <li><em><strong>Hades</em></strong> on Nintendo Switch, 35 hours ❤️</li>
       <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 15 hours 💙</li>
       <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours</li>
       <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours 💙</li>
@@ -54,7 +56,7 @@
       <li><em><strong>Cuphead</em></strong> on Nintendo Switch, 2 hours</li>
       <li><em><strong>Rayman Legends: Definitive Edition</em></strong> on Nintendo Switch, 50 hours 💙</li>
       <li><em><strong>Slain</em></strong> on Nintendo Switch, 5 hours</li>
-      <li><em><strong>Donkey King Country: Tropical Freeze</em></strong> on Nintendo Switch, 20 hours 💙</li>
+      <li><em><strong>Donkey Kong Country: Tropical Freeze</em></strong> on Nintendo Switch, 20 hours 💙</li>
     </ul>
     <h2>2018</h2>
     <ul>
