--- a/miscellany/speaking-teaching.html
+++ b/miscellany/speaking-teaching.html
@@ -28,7 +28,8 @@
   <section class="content list">
     <h1>Speaking</h1>
     <ul>
-      <li><strong>Diseño y producción de tipografías para comercializar y distribuir</strong> (junto a Sabrina López y Vicente Lamónaca). Mercado de Industrias Culturales y Creativas de Uruguay, online, 2020.</li>
+      <!-- <li><strong>Diseño y producción de tipografías para comercializar y distribuir</strong> (junto a Sabrina López y Vicente Lamónaca). Mercado de Industrias Culturales y Creativas de Uruguay, online, 2020.</li> -->
+      <li><strong>Narrativa tipográfica.</strong> EASD València, València, 2020.</li>
       <li><strong>Narrativa tipográfica.</strong> Creatus Dominus, online, 2020.</li>
       <li><strong>Pedro Arilla.</strong> TypeThursday Bogotá, online, 2020.</li>
       <li><strong>Narrativa tipográfica.</strong> MálagaType, Málaga, Spain, 2019.</li>
@@ -50,6 +51,7 @@
     </ul>
     <h1>Teaching</h1>
     <ul>
+      <li><strong>Type design.</strong> EASD València, València, 2020.</li>
       <li><strong>Typographic narrative.</strong> Máster de Diseño Gráfico, Animum3D, online, 2020.</li>
       <li><strong>Type design.</strong> Type Crit Crew, online, 2020.</li>
       <li><strong>Type design.</strong> V Glíglifo, Sos del Rey Católico, Spain, 2018.</li>
