--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -28,12 +28,17 @@
   <section class="content list">
     <h1><strong>Gaming</strong></h1>
     <p>
-    💙 means I finished it.<br>
+    💙 means I’ve finished it.<br>
     ❤️ means FREAKIN’ WOW.<br>
     </p>
+    <h2>2021</h2>
+    <ul>
+      <li><em><strong>Mario Kart 8 Deluxe</em></strong> on Nintendo Switch, 30 hours</li>
+      <li><em><strong>Immortals Fenyx Rising</em></strong> on Nintendo Switch, 30 hours</li>
+    </ul>
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Immortals Fenyx Rising</em></strong> on Nintendo Switch, 30 hours</li>
+      <li><em><strong>Overcooked 2</em></strong> on Nintendo Switch, 15 hours</li>
       <li><em><strong>Dead cells</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Bioshock</em></strong> on Nintendo Switch, 3 hours</li>
       <li><em><strong>Hades</em></strong> on Nintendo Switch, 35 hours ❤️</li>
