--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -32,9 +32,28 @@
     ❤️ means FREAKIN’ WOW.<br>
     💕 means I re-read this book — so potentially “wow-WOW”.<br>
     </p>
+    <h2>2021</h2>
+    <ul>
+      <li><em><strong>Cómo escribo novela policiaca</em></strong> de Andreu Martín 💙</li>
+      <li><em><strong>Microhistoria de España</em></strong> de William Chislett 💙</li>
+      <li><em><strong>El libro rojo de la publicidad</em></strong> de Luis Basat</li>
+      <li><em><strong>Replay</em></strong> by Tristan Donovan 💙</li>
+      <li><em><strong>Death Note</em></strong> by Tsugumi Ohba and Takeshi Obata</li>
+      <li>&emsp;&rarr; Vol. 1: Boredom</li>
+      <li>&emsp;&rarr; Vol. 2: Confluence</li>
+      <li>&emsp;&rarr; Vol. 3: Hard Run</li>
+      <li>&emsp;&rarr; Vol. 4: Love</li>
+      <li>&emsp;&rarr; Vol. 5: Witheout</li>
+      <li><em><strong>Fullmetal Alchemist</em></strong> by Hiromu Arakawa</li>
+      <li>&emsp;&rarr; Volume One</li>
+    </ul>
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Replay</em></strong> by Tristan Donovan 💙</li>
+      <li><em><strong>El ala rota</em></strong> de Antonio Altarriba y Kim 💙</li>
+      <li><em><strong>El arte de volar</em></strong> de Antonio Altarriba y Kim ❤️</li>
+      <li><em><strong>Los surcos del azar</em></strong> de Paco Roca ❤️</li>
+      <li><em><strong>El faro</em></strong> de Paco Roca</li>
+      <li><em><strong>El tesoro del Cisne Negro</em></strong> de Guillermo Corral y Paco Roca</li>
       <li><em><strong>Historia de un hombre de Cinco Villas</em></strong> de Dionisio Lacasa Abadía 💙</li>
       <li><em><strong>Manifiesto por la lectura</em></strong> de Irene Vallejo 💙</li>
       <li><em><strong>Morder la manzana</em></strong> de Leticia Dolera 💙</li>
