--- a/miscellany/speaking-teaching.html
+++ b/miscellany/speaking-teaching.html
@@ -29,6 +29,7 @@
     <h1>Speaking</h1>
     <ul>
       <!-- <li><strong>Diseño y producción de tipografías para comercializar y distribuir</strong> (junto a Sabrina López y Vicente Lamónaca). Mercado de Industrias Culturales y Creativas de Uruguay, online, 2020.</li> -->
+      <li><strong>Narrativa tipográfica.</strong> Universidad Complutense de Madrid, online, 2020.</li>
       <li><strong>Narrativa tipográfica.</strong> EASD València, València, 2020.</li>
       <li><strong>Narrativa tipográfica.</strong> Creatus Dominus, online, 2020.</li>
       <li><strong>Pedro Arilla.</strong> TypeThursday Bogotá, online, 2020.</li>
