--- a/miscellany/writing.html
+++ b/miscellany/writing.html
@@ -26,10 +26,11 @@
     </ul>
   </section>
   <section class="content list">
-    <h1><strong>Writing</strong></h1>
+    <h1><strong>Writing and interviews</strong></h1>
     <ul>
       <li><strong><em><a href="https://donserifa.com" target="_blank">donserifa.com</a></em></strong> (Editor), Articles and podcast on typography, 2011–now.</li>
       <li><strong><em><a href="https://graffica.info/author/pedroarilla/" target="_blank">graffica.info</a></em></strong>, Articles on typography and type design, 2016 + 2020–now.
+      <li><strong><a href="https://blog.weareshifta.com/entrevista-a-pedro-arilla-editor-de-don-serifa">«Entrevista a Pedro Arilla»</a></strong>, <em>Shifta Blog</em>, w/ Aina Gatnau, 29/01/2021.</li>
       <li><strong><a href="https://cadsondemak.com/for-the-beauty-of-writing/" target="_blank">เพื่อความงดงามของการเขียน</a></strong>, <em>Cadson Demak</em>, w/ Kamolkarn Kosolkarn (tr.), 10/05/2019.</li>
       <li><strong>‘For the beauty of writing’</strong>, <em>Typenotes</em> (no. 03, 2019), pp. 68–71.</li>
       <li><strong><a href="https://www.rayitasazules.com/fs-neruda-poetica-tipografica/">«FS Neruda, poética tipográfica»</a></strong>, <em>Rayitas Azules</em>, w/ Ana Moliz, 19/12/2018.</li>
