--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -34,6 +34,7 @@
     </p>
     <h2>2021</h2>
     <ul>
+      <li><em><strong>Lo esencial: el diseño y otras cosas de la vida</em></strong> de Miguel Milá ❤️</li>
       <li><em><strong>Cómo escribo novela policiaca</em></strong> de Andreu Martín 💙</li>
       <li><em><strong>Microhistoria de España</em></strong> de William Chislett 💙</li>
       <li><em><strong>El libro rojo de la publicidad</em></strong> de Luis Basat</li>
