--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -33,24 +33,26 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Mario Kart 8 Deluxe</em></strong> on Nintendo Switch, 30 hours</li>
+      <li><em><strong>Gris</em></strong> on Nintendo Switch, 5 hours 💙</li>
+      <li><em><strong>Mario Kart 8 Deluxe</em></strong> on Nintendo Switch, 15 hours</li>
       <li><em><strong>Immortals Fenyx Rising</em></strong> on Nintendo Switch, 30 hours</li>
     </ul>
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Overcooked 2</em></strong> on Nintendo Switch, 15 hours</li>
+      <li><em><strong>Overcooked 2</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Dead cells</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Bioshock</em></strong> on Nintendo Switch, 3 hours</li>
       <li><em><strong>Hades</em></strong> on Nintendo Switch, 35 hours ❤️</li>
       <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 15 hours 💙</li>
-      <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours</li>
+      <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 10 hours</li>
+      <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours 💙</li>
       <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours 💙</li>
       <li><em><strong>Yooka-Laylee and the Impossible Lair</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Fortnite</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Elliot Quest</em></strong> on Nintendo Switch, 3 hours</li>
       <li><em><strong>Sonic Mania</em></strong> on Nintendo Switch, 1 hour</li>
       <li><em><strong>Old Man’s Journey</em></strong> on Nintendo Switch, 1 hour</li>
-      <li><em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 150 hours ❤️</li>
+      <li><em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 155 hours ❤️❤️❤️</li>
       <li><em><strong>Ori and the Blind Forest</em></strong> on Nintendo Switch, 55 hours ❤️</li>
       <li><em><strong>SteamWorld Dig 2</em></strong> on Nintendo Switch, 10 hours 💙</li>
       <li><em><strong>Hollow Knight</em></strong> on Nintendo Switch, 20 hours</li>
