--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -34,6 +34,11 @@
     </p>
     <h2>2021</h2>
     <ul>
+      <li><em><strong>¡Milagro!</em></strong> de Jorge Decarlini 💙</li>
+      <li><em><strong>Olivetti, a unidade na diversidade</em></strong> de María Ramos</li>
+      <li><em><strong>El enigma de la habitación 622</em></strong> de Joël Dicker</li>
+      <li><em><strong>El libro de las Aventuras Gráficas</em></strong> de Raúl Muñoz et al.</li>
+      <li><em><strong>Rey Blanco</em></strong> de Juan Gómez-Jurado</li>
       <li><em><strong>Lo esencial: el diseño y otras cosas de la vida</em></strong> de Miguel Milá ❤️</li>
       <li><em><strong>Cómo escribo novela policiaca</em></strong> de Andreu Martín 💙</li>
       <li><em><strong>Microhistoria de España</em></strong> de William Chislett 💙</li>
