--- a/fonts/rocknroll.html
+++ b/fonts/rocknroll.html
@@ -29,7 +29,7 @@
     <h1><strong>Rock &amp; Roll</strong></h1>
     <p>Rock & Roll is a multi-script type system ready to go up on stage and performs a set list full of your favourite songs. This duo is composed by Rock, the storming serif who plays Latin, Greek and Cyrillic; and Roll, the groovy sans serif who plays Latin, Arabic and Japanese.</p>
     <p>Both typefaces were designed to play together, even when Roll is not just the sans serif version of Rock. They share DNA, but their voices are different: Rock has an old-school and decided fragrance and Roll’s flavour is benignant and mature — but its combination will be always harmonic. Let yourself go for the rhythm and enjoy of its condensed proportions for longer lyrics and its sharp outlines for an immersive and heavenly experience.</p>
-    <p>[Project developed as part of the <a href="https://typefacedesign.net/typefaces/year/2017/rock-roll/" title="Rock & Roll at MATD 16/17" target="_blank">MATD 16/17</a>]</p>
+    <p>[Project developed as part of the <a href="http://typefacedesign.net/typefaces/year/2017/rock-roll/" title="Rock & Roll at MATD 16/17" target="_blank">MATD 16/17</a>]</p>
     <h2>Features</h2>
     <ul style="margin-bottom: 1.5em;">
       <li><strong>5 scripts:</strong> Arabic, Cyrillic, Greek, Japanese and Latin.</li>
