--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -33,8 +33,10 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Gris</em></strong> on Nintendo Switch, 5 hours 💙</li>
-      <li><em><strong>Mario Kart 8 Deluxe</em></strong> on Nintendo Switch, 15 hours</li>
+      <li><em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours ❤️</li>
+      <li><em><strong>Luigi’s Mansion 3</em></strong> on Nintendo Switch, 20 hours ❤️</li>
+      <li><em><strong>Gris</em></strong> on Nintendo Switch, 3 hours 💙</li>
+      <li><em><strong>Mario Kart 8 Deluxe</em></strong> on Nintendo Switch, 20 hours ❤️</li>
       <li><em><strong>Immortals Fenyx Rising</em></strong> on Nintendo Switch, 30 hours</li>
     </ul>
     <h2>2020</h2>
