--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Gaming — Pedro Arilla</title>
-	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
+	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Gaming — Pedro Arilla"/>
-	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -33,6 +33,7 @@
     </p>
     <h2>2021</h2>
     <ul>
+      <li><em><strong>Pokémon:Crystal</em></strong> on Game Boy (emulated), 20 hours ❤️</li>
       <li><em><strong>Luigi’s Mansion 3</em></strong> on Nintendo Switch, 20 hours ❤️</li>
       <li><em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours ❤️</li>
       <li><em><strong>Gris</em></strong> on Nintendo Switch, 3 hours 💙</li>
