--- a/miscellany/awards-exhibitions.html
+++ b/miscellany/awards-exhibitions.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Exhibitions and Awards — Pedro Arilla</title>
-	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
+	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Exhibitions and Awards — Pedro Arilla"/>
-	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
