--- a/miscellany/speaking-teaching.html
+++ b/miscellany/speaking-teaching.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Speaking and Teaching — Pedro Arilla</title>
-	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
+	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
   <meta property="og:title" content="Speaking and Teaching — Pedro Arilla"/>
-	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Zaragoza. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
+	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -28,7 +28,7 @@
   <section class="content list">
     <h1>Speaking</h1>
     <ul>
-      <!-- <li><strong>Diseño y producción de tipografías para comercializar y distribuir</strong> (junto a Sabrina López y Vicente Lamónaca). Mercado de Industrias Culturales y Creativas de Uruguay, online, 2020.</li> -->
+      <li><strong>Diseño y producción de tipografías para comercializar y distribuir</strong> (junto a Sabrina López y Vicente Lamónaca). Mercado de Industrias Culturales y Creativas de Uruguay, online, 2021.</li>
       <li><strong>Pedro Arilla.</strong> TypeThursday Madrid, online, 2021.</li>
       <li><strong>Narrativa tipográfica.</strong> Universidad Complutense de Madrid, online, 2020.</li>
       <li><strong>Narrativa tipográfica.</strong> EASD València, València, 2020.</li>
