--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -28,16 +28,17 @@
   <section class="content list">
     <h1><strong>Gaming</strong></h1>
     <p>
-    💙 means I’ve finished it.<br>
+    ✅ means I’ve finished it.<br>
     ❤️ means FREAKIN’ WOW.<br>
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Pokémon:Crystal</em></strong> on Game Boy (emulated), 20 hours ❤️</li>
-      <li><em><strong>Luigi’s Mansion 3</em></strong> on Nintendo Switch, 20 hours ❤️</li>
-      <li><em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours ❤️</li>
-      <li><em><strong>Gris</em></strong> on Nintendo Switch, 3 hours 💙</li>
-      <li><em><strong>Mario Kart 8 Deluxe</em></strong> on Nintendo Switch, 20 hours ❤️</li>
+      <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 20 hours </li>
+      <li><em><strong>Pokémon:Crystal</em></strong> on Game Boy (emulated), 20 hours </li>
+      <li><em><strong>Luigi’s Mansion 3</em></strong> on Nintendo Switch, 18 hours ✅</li>
+      <li><em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours ✅</li>
+      <li><em><strong>Gris</em></strong> on Nintendo Switch, 3 hours ✅</li>
+      <li><em><strong>Mario Kart 8 Deluxe</em></strong> on Nintendo Switch, 20 hours ✅</li>
       <li><em><strong>Immortals Fenyx Rising</em></strong> on Nintendo Switch, 30 hours</li>
     </ul>
     <h2>2020</h2>
@@ -46,10 +47,10 @@
       <li><em><strong>Dead cells</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Bioshock</em></strong> on Nintendo Switch, 3 hours</li>
       <li><em><strong>Hades</em></strong> on Nintendo Switch, 35 hours ❤️</li>
-      <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 15 hours 💙</li>
+      <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 15 hours ✅</li>
       <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 10 hours</li>
-      <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours 💙</li>
-      <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours 💙</li>
+      <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours ✅</li>
+      <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours ✅</li>
       <li><em><strong>Yooka-Laylee and the Impossible Lair</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Fortnite</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Elliot Quest</em></strong> on Nintendo Switch, 3 hours</li>
@@ -57,16 +58,16 @@
       <li><em><strong>Old Man’s Journey</em></strong> on Nintendo Switch, 1 hour</li>
       <li><em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 155 hours ❤️❤️❤️</li>
       <li><em><strong>Ori and the Blind Forest</em></strong> on Nintendo Switch, 55 hours ❤️</li>
-      <li><em><strong>SteamWorld Dig 2</em></strong> on Nintendo Switch, 10 hours 💙</li>
+      <li><em><strong>SteamWorld Dig 2</em></strong> on Nintendo Switch, 10 hours ✅</li>
       <li><em><strong>Hollow Knight</em></strong> on Nintendo Switch, 20 hours</li>
     </ul>
     <h2>2019</h2>
     <ul>
       <li><em><strong>Crash Bandicoot N. Sane Trilogy</em></strong> on Nintendo Switch, 5 hours</li>
       <li><em><strong>Cuphead</em></strong> on Nintendo Switch, 2 hours</li>
-      <li><em><strong>Rayman Legends: Definitive Edition</em></strong> on Nintendo Switch, 50 hours 💙</li>
+      <li><em><strong>Rayman Legends: Definitive Edition</em></strong> on Nintendo Switch, 50 hours ✅</li>
       <li><em><strong>Slain</em></strong> on Nintendo Switch, 5 hours</li>
-      <li><em><strong>Donkey Kong Country: Tropical Freeze</em></strong> on Nintendo Switch, 20 hours 💙</li>
+      <li><em><strong>Donkey Kong Country: Tropical Freeze</em></strong> on Nintendo Switch, 20 hours ✅</li>
     </ul>
     <h2>2018</h2>
     <ul>
