--- a/miscellany/index.html
+++ b/miscellany/index.html
@@ -31,7 +31,7 @@
         &rarr; <a href="./speaking-teaching.html">Speaking and Teaching</a></br>
         &rarr; <a href="./awards-exhibitions.html">Awards and Exhibitions</a></br>
         &rarr; <a href="./coding.html">Coding</a></br>
-        &rarr; <a href="./writing.html">Writing</a></br>
+        &rarr; <a href="./writing.html">Writing and interviews</a></br>
         &rarr; <a href="./reading.html">Reading</a></br>
         &rarr; <a href="./gaming.html">Gaming</a>
       </p>
