--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -34,7 +34,8 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Feminismo para principiantes</em></strong> de Nuria Varela ❤️</li>
+      <li><em><strong>Feminismo para principiantes</em></strong> de Nuria Varela</li>
+      <li><em><strong>Apocalipsis</em></strong> de Stephen King</li>
       <li><em><strong>¡Milagro!</em></strong> de Jorge Decarlini 💙</li>
       <li><em><strong>Olivetti, a unidade na diversidade</em></strong> de María Ramos</li>
       <li><em><strong>El enigma de la habitación 622</em></strong> de Joël Dicker</li>
