--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -35,17 +35,18 @@
     <h2>2021</h2>
     <ul>
       <li><em><strong>Feminismo para principiantes</em></strong> de Nuria Varela</li>
-      <li><em><strong>Apocalipsis</em></strong> de Stephen King</li>
-      <li><em><strong>¡Milagro!</em></strong> de Jorge Decarlini 💙</li>
+      <li><em><strong>¡Protesto! Videojuegos desde una perspectiva de género</em></strong> de VV.AA. 💙</li>
+      <li><em><strong>Contra la lectura</em></strong> de Mikita Brottman ❤️</li>
+      <li><em><strong>¡Milagro! Éxtasis y sombras en El Palmar de Troya</em></strong> de Jorge Decarlini 💙</li>
       <li><em><strong>Olivetti, a unidade na diversidade</em></strong> de María Ramos</li>
       <li><em><strong>El enigma de la habitación 622</em></strong> de Joël Dicker</li>
-      <li><em><strong>El libro de las Aventuras Gráficas</em></strong> de Raúl Muñoz et al.</li>
+      <li><em><strong>El libro de las Aventuras Gráficas</em></strong> de VV.AA.</li>
       <li><em><strong>Rey Blanco</em></strong> de Juan Gómez-Jurado</li>
       <li><em><strong>Lo esencial: el diseño y otras cosas de la vida</em></strong> de Miguel Milá ❤️</li>
       <li><em><strong>Cómo escribo novela policiaca</em></strong> de Andreu Martín 💙</li>
       <li><em><strong>Microhistoria de España</em></strong> de William Chislett 💙</li>
       <li><em><strong>El libro rojo de la publicidad</em></strong> de Luis Basat</li>
-      <li><em><strong>Replay</em></strong> by Tristan Donovan 💙</li>
+      <li><em><strong>Replay. The History of Video Games</em></strong> by Tristan Donovan 💙</li>
       <li><em><strong>Death Note</em></strong> by Tsugumi Ohba and Takeshi Obata</li>
       <li>&emsp;&rarr; Vol. 1: Boredom</li>
       <li>&emsp;&rarr; Vol. 2: Confluence</li>
