--- a/miscellany/awards-exhibitions.html
+++ b/miscellany/awards-exhibitions.html
@@ -34,6 +34,7 @@
     </ul>
     <h1>Awards</h1>
     <ul>
+      <li><strong>D&AD 2021</strong>, Wood Pencil for <em>Amsteldok</em>.</li>
       <li><strong>Dutch Creativity Awards 2020</strong>, Bronze for <em>Amsteldok</em>.</li>
       <li><strong>European Design Awards 2020</strong>, Gold for <em>Amsteldok</em>.</li>
       <li><strong>TypeToday 2020</strong>, Typefaces with perfect Cyrillic for <em>FS Brabo Pro</em>.</li>
