--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -33,8 +33,10 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 20 hours </li>
-      <li><em><strong>Pokémon:Crystal</em></strong> on Game Boy (emulated), 10 hours </li>
+      <li><em><strong>Uncharted 4</em></strong> on PlayStation 5, 20 hours ✅</li>
+      <li><em><strong>Returnal</em></strong> on PlayStation 5, 5 hours</li>
+      <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 14 hours</li>
+      <li><em><strong>Pokémon:Crystal</em></strong> on Game Boy (emulated), 10 hours</li>
       <li><em><strong>Luigi’s Mansion 3</em></strong> on Nintendo Switch, 18 hours ✅</li>
       <li><em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours ✅</li>
       <li><em><strong>Gris</em></strong> on Nintendo Switch, 3 hours ✅</li>
