--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -34,7 +34,7 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Feminismo para principiantes</em></strong> de Nuria Varela</li>
+      <li><em><strong>La España de las piscinas</em></strong> de Jorge Dioni López</li>
       <li><em><strong>¡Protesto! Videojuegos desde una perspectiva de género</em></strong> de VV.AA. 💙</li>
       <li><em><strong>Contra la lectura</em></strong> de Mikita Brottman ❤️</li>
       <li><em><strong>¡Milagro! Éxtasis y sombras en El Palmar de Troya</em></strong> de Jorge Decarlini 💙</li>
