--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -33,9 +33,13 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Uncharted 4</em></strong> on PlayStation 5, 20 hours ✅</li>
-      <li><em><strong>Returnal</em></strong> on PlayStation 5, 5 hours</li>
-      <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 14 hours</li>
+      <li><em><strong>God of War</em></strong> on PlayStation 5, 23 hours ✅</li>
+      <li><em><strong>Battlefield 1</em></strong> on PlayStation 5, 1 hour</li>
+      <li><em><strong>Journey</em></strong> on PlayStation 5, 1 hour</li>
+      <li><em><strong>Uncharted 4</em></strong> on PlayStation 5, 20 hours ❤️</li>
+      <li><em><strong>Returnal</em></strong> on PlayStation 5, 6 hours</li>
+      <li><em><strong>Astros’s Playroom</em></strong> on PlayStation 5, 1 hour</li>
+      <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Pokémon:Crystal</em></strong> on Game Boy (emulated), 10 hours</li>
       <li><em><strong>Luigi’s Mansion 3</em></strong> on Nintendo Switch, 18 hours ✅</li>
       <li><em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours ✅</li>
@@ -52,24 +56,24 @@
       <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 15 hours ✅</li>
       <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours ✅</li>
-      <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours ✅</li>
+      <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours ❤️</li>
       <li><em><strong>Yooka-Laylee and the Impossible Lair</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Fortnite</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Elliot Quest</em></strong> on Nintendo Switch, 3 hours</li>
       <li><em><strong>Sonic Mania</em></strong> on Nintendo Switch, 1 hour</li>
       <li><em><strong>Old Man’s Journey</em></strong> on Nintendo Switch, 1 hour</li>
       <li><em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 155 hours ❤️❤️❤️</li>
-      <li><em><strong>Ori and the Blind Forest</em></strong> on Nintendo Switch, 55 hours ❤️</li>
-      <li><em><strong>SteamWorld Dig 2</em></strong> on Nintendo Switch, 10 hours ✅</li>
+      <li><em><strong>Ori and the Blind Forest</em></strong> on Nintendo Switch, 40 hours ❤️</li>
+      <li><em><strong>SteamWorld Dig 2</em></strong> on Nintendo Switch, 10 hours ❤️</li>
       <li><em><strong>Hollow Knight</em></strong> on Nintendo Switch, 20 hours</li>
     </ul>
     <h2>2019</h2>
     <ul>
       <li><em><strong>Crash Bandicoot N. Sane Trilogy</em></strong> on Nintendo Switch, 5 hours</li>
       <li><em><strong>Cuphead</em></strong> on Nintendo Switch, 2 hours</li>
-      <li><em><strong>Rayman Legends: Definitive Edition</em></strong> on Nintendo Switch, 50 hours ✅</li>
+      <li><em><strong>Rayman Legends: Definitive Edition</em></strong> on Nintendo Switch, 40 hours ✅</li>
       <li><em><strong>Slain</em></strong> on Nintendo Switch, 5 hours</li>
-      <li><em><strong>Donkey Kong Country: Tropical Freeze</em></strong> on Nintendo Switch, 20 hours ✅</li>
+      <li><em><strong>Donkey Kong Country: Tropical Freeze</em></strong> on Nintendo Switch, 20 hours ❤️</li>
     </ul>
     <h2>2018</h2>
     <ul>
