--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -28,9 +28,9 @@
   <section class="content list">
     <h1><strong>Reading</strong></h1>
     <p>
-    💙 means I very recommend it.<br>
-    ❤️ means FREAKIN’ WOW.<br>
-    💕 means I re-read this book — so potentially “wow-WOW”.<br>
+    💙 means I liked it above average.<br>
+    ❤️ means I absolutely loved it.<br>
+    💕 means I re-read this book.<br>
     </p>
     <h2>2021</h2>
     <ul>
