--- a/miscellany/speaking-teaching.html
+++ b/miscellany/speaking-teaching.html
@@ -28,7 +28,8 @@
   <section class="content list">
     <h1>Speaking</h1>
     <ul>
-      <li><strong>Diseño y producción de tipografías para comercializar y distribuir</strong> (junto a Sabrina López y Vicente Lamónaca). Mercado de Industrias Culturales y Creativas de Uruguay, online, 2021.</li>
+      <li><strong>Cooperative type design</strong> (with Nacho Lavernia and Javier Mestre). Jornada de tipografía de València, online, 2021.</li>
+      <li><strong>Diseño y producción de tipografías para comercializar y distribuir</strong> (with Sabrina López and Vicente Lamónaca). Mercado de Industrias Culturales y Creativas de Uruguay, online, 2021.</li>
       <li><strong>Interview.</strong> TypeThursday Madrid, online, 2021.</li>
       <li><strong>Narrativa tipográfica.</strong> Universidad Complutense de Madrid, online, 2020.</li>
       <li><strong>Narrativa tipográfica.</strong> EASD València, València, 2020.</li>
