--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -34,7 +34,9 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Horizon Zero Dawn</em></strong> on PlayStation 5, 24 hours 💙</li>
+      <li><em><strong>Ratchet & Clank</em></strong> on PlayStation 5, 12 hours ✅</li>
+      <li><em><strong>Disco Elysium</em></strong> on PlayStation 5, 1 hour</li>
+      <li><em><strong>Horizon Zero Dawn</em></strong> on PlayStation 5, 8 hours</li>
       <li><em><strong>The Last of Us Remastered + Left Behind</em></strong> on PlayStation 5, 13 hours ❤️</li>
       <li><em><strong>God of War</em></strong> on PlayStation 5, 18 hours 💙</li>
       <li><em><strong>Battlefield 1</em></strong> on PlayStation 5, 1 hour</li>
