--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -34,7 +34,14 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Ratchet & Clank</em></strong> on PlayStation 5, 12 hours ✅</li>
+      <li><em><strong>Star Wars Jedi: Fallen Order</em></strong> on PlayStation 5 -- playing it</li>
+      <li><em><strong>Super Mario 3D World + Bowser’s Fury</em></strong> on Nintendo Switch -- playing it</li>
+      <li><em><strong>A plague tale: Innocence</em></strong> on PlayStation 5, 1 hour</li>
+      <li><em><strong>Star Wars: Squadron</em></strong> on PlayStation 5, 1 hour</li>
+      <li><em><strong>Bloodborne</em></strong> on PlayStation 5, 1 hour</li>
+      <li><em><strong>The Last of Us: Part 2</em></strong> on PlayStation 5, 21 hours ❤️</li>
+      <li><em><strong>Ratchet & Clank: A Rift Apart</em></strong> on PlayStation 5, 15 hours 💙</li>
+      <li><em><strong>Ratchet & Clank</em></strong> on PlayStation 5, 6 hours</li>
       <li><em><strong>Disco Elysium</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Horizon Zero Dawn</em></strong> on PlayStation 5, 8 hours</li>
       <li><em><strong>The Last of Us Remastered + Left Behind</em></strong> on PlayStation 5, 13 hours ❤️</li>
@@ -61,7 +68,7 @@
       <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 15 hours ✅</li>
       <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 55 hours ✅</li>
-      <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours 💙</li>
+      <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours ❤️</li>
       <li><em><strong>Yooka-Laylee and the Impossible Lair</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Fortnite</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Elliot Quest</em></strong> on Nintendo Switch, 3 hours</li>
