--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -35,7 +35,7 @@
     <h2>2021</h2>
     <ul>
       <li><em><strong>Star Wars Jedi: Fallen Order</em></strong> on PlayStation 5 -- playing it</li>
-      <li><em><strong>Super Mario 3D World + Bowser’s Fury</em></strong> on Nintendo Switch -- playing it</li>
+      <li><em><strong>Super Mario 3D World + Bowser’s Fury</em></strong> on Nintendo Switch, 12 hours 💙</li>
       <li><em><strong>A plague tale: Innocence</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Star Wars: Squadron</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Bloodborne</em></strong> on PlayStation 5, 1 hour</li>
